--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -5,7 +5,7 @@ on:
     types: [labeled]
 
 env:
-  DOCKER_IMAGE_NAME: lgiuliani80-azure-ttt
+  DOCKER_IMAGE_NAME: lgiuliani80-azure-tttq
   IMAGE_REGISTRY_URL: docker.pkg.github.com
   #################################################
   ### USER PROVIDED VALUES ARE REQUIRED BELOW   ###
